Fixed overlapping container issue
Don't set fixed heights!

--- a/src/styles/filterbar.css
+++ b/src/styles/filterbar.css
@@ -102,3 +102,10 @@
 .filters-bar .languages {
 	margin-left: auto;
 }
+
+@media only screen and (max-width: 768px) {
+	.line {
+		margin-left: -40px;
+		margin-right: -40px;
+	}
+}
