--- a/src/styles/results.css
+++ b/src/styles/results.css
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
-	border: 1px solid green;
+	/* border: 1px solid green; */
 	background-color: #faf1c9;
 	justify-content: center;
 }
