--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -17,10 +17,16 @@ body {
 }
 
 header {
-	height: 100px;
-	padding: 60px;
-	margin-top: 20px;
-	margin-bottom: 200px;
+	/* margin-top: 20px; */
+	margin-bottom: 20px;
+	padding: 10px 0px;
+}
+
+.master-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 50px;
 }
 
 h1,
@@ -40,6 +46,7 @@ h2 {
 	display: flex;
 	flex-direction: column;
 	text-align: left;
+	/* padding: 60px; */
 }
 
 /* App Title */
@@ -63,12 +70,12 @@ h2 {
 .other-wrapper {
 	display: flex;
 	flex-direction: row;
-	margin-bottom: 40px;
 }
 
 .other-wrapper > div {
 	flex: 1 1;
-	margin: 20px 0px;
+	padding: 10px;
+	margin: 10px 0px;
 }
 
 #acnh-logo {
@@ -80,17 +87,24 @@ h2 {
 	/* TODO: Add swing interaction on hover */
 }
 
-@media only screen and (max-width: 768px) {
-	.other-wrapper {
-		flex-direction: column;
-	}
-}
-
 main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-top: 20px;
-	padding: 60px;
+	/* padding: 60px; */
 	flex-wrap: wrap;
+}
+
+@media only screen and (max-width: 768px) {
+	.other-wrapper {
+		flex-direction: column;
+	}
+
+	.master-container {
+		padding: 40px;
+	}
+
+	#acnh-logo {
+		display: none;
+	}
 }
